uncommented ancient code & fixed previews not appearing because of overflow... have to find a way to handle the taskbar overflow nicely zzzzz

--- a/src/lettershooter.css
+++ b/src/lettershooter.css
@@ -19,7 +19,7 @@
   color: #33f;
 }
 .lettershooter .bg {
-  color: #0f0f0f;
+  color: #212033;
 }
 .lettershooter .s {
   color: #ff6;
